--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,7 +19,7 @@
         <property name="maximumSize">
             <size>
                 <width>750</width>
-                <height>1000</height>
+                <height>650</height>
             </size>
         </property>
         <property name="windowTitle">
@@ -159,6 +159,9 @@
                         <width>201</width>
                         <height>21</height>
                     </rect>
+                </property>
+                <property name="currentIndex">
+                    <number>0</number>
                 </property>
                 <item>
                     <property name="text">
